[package]
name = "chip8rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.35.2", features = ["bundled"] }
rand = "0.8.5"
rodio = "0.17.1"
winconsole = "0.11.1"
native-dialog = "0.6.3"
